dashes for list-items in imprint

--- a/app/imprint.html
+++ b/app/imprint.html
@@ -66,15 +66,29 @@
       <div class="sy-section__content">
         <h3 class="sy-headline">Nutzungsbedingungen/Disclaimer</h3>
         <p>
-          <ul>
-        <li>Diese Website ist Gegenstand der nachfolgenden Nutzungsbedingungen, die im Verhältnis zwischen Nutzer und Dienstanbieter mit dem Aufruf dieser Website verbindlich vereinbart sind. Soweit spezielle Bedingungen für einzelne Nutzungen dieser Website von den nachfolgenden Nutzungsbedingungen abweichen, wird in der Website an entsprechender Stelle ausdrücklich darauf hingewiesen. Es gelten dann im jeweiligen Einzelfall ergänzend die besonderen Nutzungsbedingungen.</br>
-          Diese Website beinhaltet Daten und Informationen aller Art, die marken- und/oder urheberrechtlich zugunsten des Diensteanbieters oder im Einzelfall auch zugunsten Dritter geschützt sind. Es ist daher nicht gestattet, die Website im Ganzen oder einzelne Teile davon herunterzuladen, zu vervielfältigen und/oder zu verbreiten. Gestattet ist vor allem die technisch bedingte Vervielfältigung zum Zwecke des Browsing, soweit diese Handlung keinen wirtschaftlichen Zwecken dient, sowie die dauerhafte Vervielfältigung für den eigenen Gebrauch.</li>
-        <li>Es ist gestattet, einen Link auf diese Website zu setzen, soweit er allein der Querreferenz dient. Der Diensteanbieter behält sich das Recht vor, die Gestattung zu widerrufen. Das Framen dieser Website ist nicht gestattet.</li>
-        <li>Der Diensteanbieter übernimmt die Haftung für die Inhalte seiner Website gemäß den gesetzlichen Bestimmungen. Eine Gewähr für Richtigkeit und Vollständigkeit der auf der Website befindlichen Information wird nicht übernommen. Verweise und Links auf Websites Dritter bedeuten nicht, dass sich der Diensteanbieter die hinter dem Verweis oder Link liegenden Inhalte zu eigen macht. Die Inhalte begründen keine Verantwortung des Diensteanbieters für die dort bereit gehaltenen Daten und Informationen. Der Diensteanbieter hat keinen Einfluss auf die hinter dem Link liegenden Inhalte. Für rechtswidrige, fehlerhafte oder unvollständige Inhalte und für Schäden, die aufgrund der Nutzung von einem hinter dem Link liegenden Inhalt verursacht worden sind, haftet der Diensteanbieter daher nicht.</li>
-        <li>Die Nutzung des Internets erfolgt auf eigene Gefahr des Nutzers. Der Diensteanbieter haftet vor allem nicht für den technisch bedingten Ausfall des Internets bzw. des Zugangs zum Internet.</li>
-        <li>Gerichtsstand ist, wenn der Vertragspartner Kaufmann, juristische Person des öffentlichen Rechts oder öffentlich-rechtliches Sondervermögen ist, am Sitz des Diensteanbieters. Es gilt deutsches Recht unter Ausschluss des UN-Kaufrechts.</li>
-        <li>Für den Fall, dass der Nutzer Verbraucher (nicht Unternehmer) ist, erfolgt der Hinweis gemäß Art. 14 der VO (EU) Nr. 524/2013 – ODR-Verordnung auf die Möglichkeit außergerichtlicher Streitbeilegung. Details hierzu finden sich in der vorgenannten Verordnung und unter https://ec.europa.eu/consumers/odr.</li>
-        <li>Der Diensteanbieter behält sich das Recht vor, diese Nutzungsbedingungen von Zeit zu Zeit zu modifizieren und sie der technischen sowie rechtlichen Entwicklung anzupassen. Der Nutzer – soweit er sich registriert hat – wird auf die Veränderung gesondert hingewiesen. Im Falle der Unwirksamkeit einzelner Regelungen dieser Nutzungsvereinbarung bleibt die Wirksamkeit im Übrigen unberührt.</li>
+          <ul class="sy-list sy-list--parenthesis">
+            <li class="sy-list__item">
+              Diese Website ist Gegenstand der nachfolgenden Nutzungsbedingungen, die im Verhältnis zwischen Nutzer und Dienstanbieter mit dem Aufruf dieser Website verbindlich vereinbart sind. Soweit spezielle Bedingungen für einzelne Nutzungen dieser Website von den nachfolgenden Nutzungsbedingungen abweichen, wird in der Website an entsprechender Stelle ausdrücklich darauf hingewiesen. Es gelten dann im jeweiligen Einzelfall ergänzend die besonderen Nutzungsbedingungen.</br>
+              Diese Website beinhaltet Daten und Informationen aller Art, die marken- und/oder urheberrechtlich zugunsten des Diensteanbieters oder im Einzelfall auch zugunsten Dritter geschützt sind. Es ist daher nicht gestattet, die Website im Ganzen oder einzelne Teile davon herunterzuladen, zu vervielfältigen und/oder zu verbreiten. Gestattet ist vor allem die technisch bedingte Vervielfältigung zum Zwecke des Browsing, soweit diese Handlung keinen wirtschaftlichen Zwecken dient, sowie die dauerhafte Vervielfältigung für den eigenen Gebrauch.
+            </li>
+            <li class="sy-list__item">
+              Es ist gestattet, einen Link auf diese Website zu setzen, soweit er allein der Querreferenz dient. Der Diensteanbieter behält sich das Recht vor, die Gestattung zu widerrufen. Das Framen dieser Website ist nicht gestattet.
+            </li>
+            <li class="sy-list__item">
+              Der Diensteanbieter übernimmt die Haftung für die Inhalte seiner Website gemäß den gesetzlichen Bestimmungen. Eine Gewähr für Richtigkeit und Vollständigkeit der auf der Website befindlichen Information wird nicht übernommen. Verweise und Links auf Websites Dritter bedeuten nicht, dass sich der Diensteanbieter die hinter dem Verweis oder Link liegenden Inhalte zu eigen macht. Die Inhalte begründen keine Verantwortung des Diensteanbieters für die dort bereit gehaltenen Daten und Informationen. Der Diensteanbieter hat keinen Einfluss auf die hinter dem Link liegenden Inhalte. Für rechtswidrige, fehlerhafte oder unvollständige Inhalte und für Schäden, die aufgrund der Nutzung von einem hinter dem Link liegenden Inhalt verursacht worden sind, haftet der Diensteanbieter daher nicht.
+            </li>
+            <li class="sy-list__item">
+              Die Nutzung des Internets erfolgt auf eigene Gefahr des Nutzers. Der Diensteanbieter haftet vor allem nicht für den technisch bedingten Ausfall des Internets bzw. des Zugangs zum Internet.
+            </li>
+            <li class="sy-list__item">
+              Gerichtsstand ist, wenn der Vertragspartner Kaufmann, juristische Person des öffentlichen Rechts oder öffentlich-rechtliches Sondervermögen ist, am Sitz des Diensteanbieters. Es gilt deutsches Recht unter Ausschluss des UN-Kaufrechts.
+            </li>
+            <li class="sy-list__item">
+              Für den Fall, dass der Nutzer Verbraucher (nicht Unternehmer) ist, erfolgt der Hinweis gemäß Art. 14 der VO (EU) Nr. 524/2013 – ODR-Verordnung auf die Möglichkeit außergerichtlicher Streitbeilegung. Details hierzu finden sich in der vorgenannten Verordnung und unter https://ec.europa.eu/consumers/odr.
+            </li>
+            <li class="sy-list__item">
+              Der Diensteanbieter behält sich das Recht vor, diese Nutzungsbedingungen von Zeit zu Zeit zu modifizieren und sie der technischen sowie rechtlichen Entwicklung anzupassen. Der Nutzer – soweit er sich registriert hat – wird auf die Veränderung gesondert hingewiesen. Im Falle der Unwirksamkeit einzelner Regelungen dieser Nutzungsvereinbarung bleibt die Wirksamkeit im Übrigen unberührt.
+            </li>
           </ul>
         </p>
       </div>
