clicking on contact now actually scrolls to contact

--- a/app/index.html
+++ b/app/index.html
@@ -21,7 +21,7 @@
 
     ${ require('./partials/landingpage/meet-us.html') }
 
-    <div class="sy-grid__row" id="sy-contact">
+    <div class="sy-grid__row">
       <div class="sy-grid__col-6">
         ${ require('./partials/landingpage/office.html') }
       </div>
