changed order of contact form and office map on desktop

--- a/app/index.html
+++ b/app/index.html
@@ -20,7 +20,7 @@
     ${ require('./partials/landingpage/meet-us.html') }
 
     <div class="sy-grid__row">
-      <div class="sy-grid__col-6">
+      <div class="sy-grid__col-6 sy-grid__col--desktop-last">
         ${ require('./partials/landingpage/office.html') }
       </div>
       <div class="sy-grid__col-6">
