fix(styles): Enable word breaks with css

--- a/app/privacy.html
+++ b/app/privacy.html
@@ -14,7 +14,7 @@
   <div class="sy-page sy-legal">
     <section class="sy-section">
       <header class="sy-header">
-        <h1 class="sy-headline sy-headline--section">Datenschutzerklärung</h1>
+        <h1 class="sy-headline sy-headline--section">Datenschutz&shy;erklärung</h1>
       </header>
 
       <div class="sy-section__content">
