--- a/app/privacy.html
+++ b/app/privacy.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="de">
 
 <head>
   <meta charset="utf-8">
-  <title>Satellytes</title>
+  <title>Datenschutzerklärung</title>
   <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
   <link href="https://fonts.googleapis.com/css?family=Roboto:400,700" rel="stylesheet">
 </head>
@@ -14,7 +14,7 @@
   <div class="sy-page sy-legal">
     <section class="sy-section">
       <header class="sy-header">
-        <h1 class="sy-headline sy-headline--section">Datenschutz&shy;erklärung</h1>
+        <h1 class="sy-headline sy-headline--section">Datenschutzerklärung</h1>
       </header>
 
       <div class="sy-section__content">
