change contact mail from ping@ to beep@

--- a/app/imprint.html
+++ b/app/imprint.html
@@ -34,7 +34,7 @@
         <h3 class="sy-headline">Kontakt</h3>
         <p>
           Telefon:+49 89 99829894<br/>
-          E-Mail: <a href="mailto:ping@satellytes.com">ping@satellytes.com</a><br/>
+          E-Mail: <a href="mailto:beep@satellytes.com">beep@satellytes.com</a><br/>
           Internetadresse: <a href="https://www.satellytes.com" target="_blank" rel="noopener">https://satellytes.com</a><br/>
         </p>
       </div>
